--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                     >Web<span class="logo-header">Studio</span>
                     </a> 
                 <ul class="nav-list">
-                    <li><a class="nav-item" href="./index.html">Studio</a></li>
-                    <li><a class="nav-item" href="">Portfolio</a></li>
-                    <li><a class="nav-item" href="">Contacts</a></li>
+                    <li class="nav-list-item"><a class="nav-link current"
+                    href="./index.html">Studio</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="">Portfolio</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="">Contacts</a></li>
                 </ul>
             </nav>
     
