--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <h2 class="hidden-header">Features</h2>
             <ul class="features-list">
                 <li class="features-item">
+                    <div class="features-icon">
+                        <svg class="feature-icon-style" width="64" height="64">
+                            <use href="./images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="section-header-item">Strategy</h3>
                     <p class="section-text">
                         Our goal is to identify the business problem to walk away
@@ -67,6 +72,11 @@
                     </p>
                 </li>
                 <li class="features-item">
+                    <div class="features-icon">
+                        <svg class="feature-icon-style" width="64" height="64">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="section-header-item">Punctuality</h3>
                     <p class="section-text">
                         Bring the key message to the brand's audience for the best
@@ -74,6 +84,11 @@
                     </p>
                 </li>
                 <li class="features-item">
+                    <div class="features-icon">
+                        <svg class="feature-icon-style" width="64" height="64">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="section-header-item">Diligence</h3>
                     <p class="section-text">
                         Research and confirm brands that present the strongest digital
@@ -81,6 +96,11 @@
                     </p>
                 </li>
                 <li class="features-item">
+                    <div class="features-icon">
+                        <svg class="feature-icon-style" width="64" height="64">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="section-header-item">Technologies</h3>
                     <p class="section-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for
@@ -101,6 +121,7 @@
                 <div class="team-item-description">
                     <h3 class="section-header-item">Mark Guerrero</h3> 
                     <p class="section-text">Product Designer</p>
+                    <ul class=""
                 </div>
                 </li>
                 <li class="team-card">
