--- a/index.html
+++ b/index.html
@@ -118,34 +118,169 @@
                 <li class="team-card">
                     <img src="./images/Mark.jpg" width="264" 
                     alt="Mark Guerrero"/>
-                <div class="team-item-description">
+                <div class="team-card-description">
                     <h3 class="section-header-item">Mark Guerrero</h3> 
                     <p class="section-text">Product Designer</p>
-                    <ul class=""
+                    <ul class="team-card-soc-links">
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.instagram.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.twitter.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="team-soc-link" href="https://www.facebook.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>    
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.linkedin.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>  
+                                </svg>
+                            </a>
+                        </li> 
+                    </ul>
                 </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/Tom.jpg" width="264" 
                     alt="Tom Ford"/>
-                <div class="team-item-description">
+                <div class="team-card-description">
                     <h3 class="section-header-item">Tom Ford</h3> 
                     <p class="section-text">Frontend Developer</p>
+                    <ul class="team-card-soc-links">
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.instagram.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.twitter.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="team-soc-link" href="https://www.facebook.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>    
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.linkedin.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>  
+                                </svg>
+                            </a>
+                        </li> 
+                    </ul>
                 </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/Camila.jpg" width="264"
                     alt="Camila Garcia"/>
-                <div class="team-item-description">
+                <div class="team-card-description">
                     <h3 class="section-header-item">Camila Garcia</h3>
                     <p class="section-text">Marketing</p>
+                    <ul class="team-card-soc-links">
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.instagram.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.twitter.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="team-soc-link" href="https://www.facebook.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>    
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.linkedin.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>  
+                                </svg>
+                            </a>
+                        </li> 
+                    </ul>
                 </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/Daniel.jpg" width="264"
                     alt="Daniel Wilson"/>
-                <div class="team-item-description">
+                <div class="team-card-description">
                     <h3 class="section-header-item">Daniel Wilson</h3>
                     <p class="section-text">UI Designer</p>
+                    <ul class="team-card-soc-links">
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.instagram.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.twitter.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="team-soc-link" href="https://www.facebook.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>    
+                        </li>
+                        <li class="team-soc-link-item">
+                            <a class="team-soc-link" href="https://www.linkedin.com/"
+                            target="_blank" rel="noopener noreferrer">
+                                <svg class="team-card-soc-item" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>  
+                                </svg>
+                            </a>
+                        </li> 
+                    </ul>
                 </div>
                 </li>
             </ul>
