--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="team-soc-link-item">
                             <a class="team-soc-link" href="https://www.facebook.com/"
                             target="_blank" rel="noopener noreferrer">
                                 <svg class="team-card-soc-item" width="16" height="16">
@@ -181,6 +181,7 @@
                             </a>
                         </li>
                         <li>
+                            <li class="team-soc-link-item">
                             <a class="team-soc-link" href="https://www.facebook.com/"
                             target="_blank" rel="noopener noreferrer">
                                 <svg class="team-card-soc-item" width="16" height="16">
@@ -223,6 +224,7 @@
                             </a>
                         </li>
                         <li>
+                            <li class="team-soc-link-item">
                             <a class="team-soc-link" href="https://www.facebook.com/"
                             target="_blank" rel="noopener noreferrer">
                                 <svg class="team-card-soc-item" width="16" height="16">
@@ -264,7 +266,7 @@
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="team-soc-link-item">
                             <a class="team-soc-link" href="https://www.facebook.com/"
                             target="_blank" rel="noopener noreferrer">
                                 <svg class="team-card-soc-item" width="16" height="16">
