--- a/index.html
+++ b/index.html
@@ -346,13 +346,52 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-position">
+        <div class="footer-info">
             <a class="logo footer-link" href="./index.html" 
             >Web<span class="logo-footer">Studio</span>
             </a>
                 <p class="footer-text">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
+        </div>
+        <div class="footer-soc-media">
+            <p class="soc-media-text">Social media</p>
+            <ul class="footer-soc-links-list">
+                <li class="footer-soc-link-item">
+                    <a class="footer-soc-link" href="https://www.instagram.com/"
+                    target="_blank" rel="noopener noreferrer"
+                    ><svg class="footer-soc-item" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-link-item">
+                    <a class="footer-soc-link" href="https://www.twitter.com/"
+                    target="_blank" rel="noopener noreferrer"
+                    ><svg class="footer-soc-item" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-link-item">
+                    <a class="footer-soc-link" href="https://www.facebook.com/"
+                    target="_blank" rel="noopener noreferrer"
+                    ><svg class="footer-soc-item" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-link-item">
+                    <a class="footer-soc-link" href="https://www.linkedin.com/"
+                    target="_blank" rel="noopener noreferrer"
+                    ><svg class="footer-soc-item" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>   
         </div>
     </footer>
 </body>
