--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <li class="footer-soc-link-item">
                     <a class="footer-soc-link" href="https://www.instagram.com/"
                     target="_blank" rel="noopener noreferrer"
-                    ><svg class="footer-soc-item" width="24" height="24">
+                    ><svg class="footer-soc-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                     </a>
@@ -369,7 +369,7 @@
                 <li class="footer-soc-link-item">
                     <a class="footer-soc-link" href="https://www.twitter.com/"
                     target="_blank" rel="noopener noreferrer"
-                    ><svg class="footer-soc-item" width="24" height="24">
+                    ><svg class="footer-soc-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                     </a>
@@ -377,7 +377,7 @@
                 <li class="footer-soc-link-item">
                     <a class="footer-soc-link" href="https://www.facebook.com/"
                     target="_blank" rel="noopener noreferrer"
-                    ><svg class="footer-soc-item" width="24" height="24">
+                    ><svg class="footer-soc-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                     </a>
@@ -385,7 +385,7 @@
                 <li class="footer-soc-link-item">
                     <a class="footer-soc-link" href="https://www.linkedin.com/"
                     target="_blank" rel="noopener noreferrer"
-                    ><svg class="footer-soc-item" width="24" height="24">
+                    ><svg class="footer-soc-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                     </a>
