--- a/index.html
+++ b/index.html
@@ -291,54 +291,89 @@
         <div class="container"> 
             <h2 class="section-header">Our Portfolio</h2>
             <ul class="portfolio-list">
-                <li class="portfolio-item">
+                <li class="portfolio-list-item">
+                    <div class="portfolio-item-box">
                     <img src="./images/banking-app-min.jpg"
                     alt="Banking App" width="360"/>
-                    
-            <div class="item-description portfolio-border">
+                        <p class="portfolio-item-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task 
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>    
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Banking App</h3> 
                     <p class="section-text">App</p> 
-            </div>
+                    </div>
                 </li> 
-                <li class="portfolio-item">
-                    <img src="./images/img-6-Cashless-Payment-min.jpg" 
-                    alt="Cashless Payment" width="360"/>
-            <div class="item-description portfolio-border">
+                <li class="portfolio-list-item">
+                    <div class="portfolio-item-box">
+                        <img src="./images/img-6-Cashless-Payment-min.jpg" 
+                        alt="Cashless Payment" width="360"/>
+                        <p class="portfolio-item-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task 
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>  
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Cashless Payment</h3>
                     <p class="section-text">Marketing</p>
-            </div>
+                    </div>
                 </li>
-                <li class="portfolio-item"> 
-                    <img src="./images/img-7-Meditation-App-min.jpg"  
-                    alt="Meditation App" width="360"/>
-            <div class="item-description portfolio-border">
+                <li class="portfolio-list-item"> 
+                    <div class="portfolio-item-box">
+                        <img src="./images/img-7-Meditation-App-min.jpg"  
+                        alt="Meditation App" width="360"/>
+                        <p class="portfolio-item-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task 
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>  
+                    <div class="item-description portfolio-border">
                     <h3 class="section-header-item">Meditation App</h3>
                     <p class="section-text">App</p>
-            </div>
+                    </div>
                 </li>
-                <li class="portfolio-item">
+                <li class="portfolio-list-item">
+                    <div class="portfolio-item-box">
                     <img src="./images/img-8-Taxi-Service-min.jpg"  
                     alt="Taxi Service" width="360"/>
-            <div class="item-description portfolio-border">
+                    <p class="portfolio-item-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task 
+                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>  
+                    <div class="item-description portfolio-border">
                     <h3 class="section-header-item">Taxi Service</h3>
                     <p class="section-text">Marketing</p>
-            </div>
+                    </div>   
                 </li>
-                <li class="portfolio-item"> 
+                <li class="portfolio-list-item"> 
+                    <div class="portfolio-item-box">
                     <img src="./images/img-9-Screen-Illustration-min.jpg"
                     alt="Screen Illustrator" width="360"/>
-            <div class="item-description portfolio-border">
+                    <p class="portfolio-item-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task 
+                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>  
+                    <div class="item-description portfolio-border">
                     <h3 class="section-header-item">Screen Illustrations</h3> 
                     <p class="section-text">Design</p>
-            </div>
+                    </div>
                 </li>
-                <li class="portfolio-item"> 
+                <li class="portfolio-list-item">
+                    <div class="portfolio-item-box">                   
                     <img src="./images/img-10-Online-Courses-min.jpg"
                     alt="Online Courses" width="360"/>
-            <div class="item-description portfolio-border">
+                    <p class="portfolio-item-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task 
+                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>
+                    <div class="item-description portfolio-border">
                     <h3 class="section-header-item">Online Courses</h3> 
                     <p class="section-text">Marketing</p>
-                </div>
+                    </div>
                 </li>
             </ul>
         </div> 
