--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                             Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
                     </div>  
-                    <div class="item-description portfolio-border">
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Meditation App</h3>
                     <p class="section-text">App</p>
                     </div>
@@ -342,7 +342,7 @@
                         Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                     </div>  
-                    <div class="item-description portfolio-border">
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Taxi Service</h3>
                     <p class="section-text">Marketing</p>
                     </div>   
@@ -356,7 +356,7 @@
                         Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                     </div>  
-                    <div class="item-description portfolio-border">
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Screen Illustrations</h3> 
                     <p class="section-text">Design</p>
                     </div>
@@ -370,7 +370,7 @@
                         Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                     </div>
-                    <div class="item-description portfolio-border">
+                    <div class="portfolio-item-description portfolio-border">
                     <h3 class="section-header-item">Online Courses</h3> 
                     <p class="section-text">Marketing</p>
                     </div>
